[package]
name = "edge-t2s-py"
version = "0.1.0"
edition = "2024"

[lip]
name = "edge-t2s-py"
crate-type = ["cdylib"]

[dependencies]
edge-t2s = { git = "https://github.com/mr-alimuhammadi/edge-t2s", version = "0.1.0" }
pyo3 = { version = "0.24.2", features = ["extension-module", "experimental-async"] }

[package.metadata.maturin]
name = "edge_tts_py"
